feat: return attempt dialogue history
